using GDD.ObjectPool;

namespace GDD
{
    public class EnemyBullet : GameObjectPool
    {
        
    }
}